--- a/app/views/form_section/_date_range.html.erb
+++ b/app/views/form_section/_date_range.html.erb
@@ -33,7 +33,11 @@
       <%= text_field_tag name.gsub(date_range[:name], "#{date_range[:name]}_from"), value_from, :class => 'form_date_field', :disabled => date_range.disabled, :id => "#{field_id}_from" %>
       <span><%="#{I18n.t("fields.date_range.to")}:"%></span>
       <%= text_field_tag name.gsub(date_range[:name], "#{date_range[:name]}_to"), value_to, :class => 'form_date_field has_help', :disabled => date_range.disabled, :id => "#{field_id}_to" %>
+      <% if date_range.help_text.present? %>
+        <p class="help"><%= date_range.help_text  %></p>
+      <% else %>
         <p class="help"><%= t("fields.date_help") %></p>
+      <% end %>
     </div>
   </div>
 </div>
