--- a/app/views/form_section/_document_upload_box.html.erb
+++ b/app/views/form_section/_document_upload_box.html.erb
@@ -1,17 +1,10 @@
 <%
   # By having certain things derived from field name and form name
   # it'll be much easier now to load different types of document forms (BIA, BID, Other)
-  upload_document = field.name
-  update_document = upload_document.sub 'upload', 'update'
-
   documents = formObject[form_id] || []
   documents = documents.select { |document| document["file_name"].present? && document["attachment_key"].present? }
   record_class_name = formObject.class.name.underscore.downcase
-
-  date_validator = field.date_validation == 'not_future_date' ? "primeroDateNotInFuture" : "primeroDate"
-  error_msg = field.date_validation == 'not_future_date' ? "fields.future_date_not_valid" : "fields.date_not_valid"
   doc_type = field.upload_document_type || 'document'
-  help_text = field.upload_document_help_text || {}
 %>
 <div class="row">
   <p>
@@ -20,147 +13,13 @@
 </div>
 <% if documents.present? && !formObject.new_record?%>
   <% documents.each do |document| %>
-    <div class="row update_document">
-      <%
-      attachment_key = document["attachment_key"]
-      document_description = document["document_description"] || ""
-      comments = document["comments"] || ""
-      prefix = "#{record_class_name}_#{update_document}_#{attachment_key}"
-      name = "#{record_class_name}[#{update_document}][#{attachment_key}]"
-      is_current_field_id = "#{prefix}_is_current"
-      description_field_id = "#{prefix}_document_description"
-      date_field_id = "#{prefix}_date"
-      comments_field_id = "#{prefix}_comments"
-      delete_field_id = "#{prefix}_delete_document"
-      %>
-      <div class="medium-4 columns">
-        <span class="tool-tip-label">
-           <label class="key"><%= I18n.t("fields.#{document_upload_box.name}") %></label>
-        </span>
-      </div>
-      <div class="medium-8 columns">
-        <div>
-          <span class="document"><%= document["file_name"] %></span>
-        </div>
-        <% if help_text['add'].present? %><p class="help"><%= help_text['add']  %></p><% end %>
-      </div>
-    </div>
-    <div class="row">
-      <div class="medium-4 columns">
-        <label class="key"><%=I18n.t("fields.file_upload_box.#{doc_type}.current_document_label")%></label>
-      </div>
-      <div class="medium-8 columns">
-        <% checked = document["is_current"].present? %>
-        <%= check_box_tag "#{name}[is_current]", true, checked, :id => is_current_field_id %>
-        <% if help_text['current'].present? %><p class="help"><%= help_text['current']  %></p><% end %>
-      </div>
-    </div>
-    <div class="row">
-      <div class="medium-4 columns">
-        <label class="key"><%=I18n.t("fields.file_upload_box.#{doc_type}.document_name_label")%></label>
-      </div>
-      <div class="medium-8 columns">
-        <%= text_field_tag "#{name}[document_description]", document_description, :id => description_field_id %>
-        <% if help_text['name'].present? %><p class="help"><%= help_text['name']  %></p><% end %>
-      </div>
-    </div>
-    <div class="row">
-      <div class="medium-4 columns">
-        <label class="key"><%= I18n.t("fields.file_upload_box.#{doc_type}.document_date_label")%></label>
-      </div>
-      <div class="medium-8 columns">
-        <% date_for_display = field_value_for_display document["date"] %>
-        <%= text_field_tag "#{name}[date]", date_for_display, :class => 'form_date_field has_help', :id => date_field_id, "data-abide-validator" => date_validator %>
-        <small class="error"><%= I18n.t(error_msg)%></small>
-        <p class="help">
-          <% if help_text['date'].present? %>
-            <%= help_text['date']  %>
-          <% else %>
-            <%= t("fields.date_help") %>
-          <% end %>
-        </p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="medium-4 columns">
-        <label class="key"><%=I18n.t("fields.file_upload_box.#{doc_type}.comment_label")%></label>
-      </div>
-      <div class="medium-8 columns">
-        <%= text_area_tag "#{name}[comments]", comments, :id => comments_field_id %>
-        <% if help_text['comments'].present? %><p class="help"><%= help_text['comments']  %></p><% end %>
-        <div>
-          <%= check_box_tag("#{name}[delete_document]", true, false, :id => delete_field_id) %>
-          <%= label_tag delete_field_id, t("#{record_class_name}.actions.delete_document") %>
-        </div>
-      </div>
-    </div>
+    <%= render 'form_section/document_upload_box_edit_fields', document: document, record_class_name: record_class_name, field: field, doc_type: doc_type %>
   <% end %>
 <% end %>
 <div id="file_container">
   <div id="file-group" class="document">
     <div class="file">
-      <%
-        prefix = "#{record_class_name}_#{upload_document}"
-        is_current_upload_id =  "#{prefix}_0_is_current"
-        description_upload_id = "#{prefix}_0_document_description"
-        date_upload_id = "#{prefix}_0_date"
-        comments_upload_id = "#{prefix}_0_comments"
-        delete_upload_id = "#{prefix}_0_delete_document"
-        %>
-      <div class="row">
-        <div class="medium-4 columns">
-          <span class="tool-tip-label">
-            <%= label_tag "#{record_class_name}[#{upload_document}][0][document]", I18n.t("fields.file_upload_box.#{doc_type}.add_document_label"), :class=>'key inline' %>
-          </span>
-        </div>
-        <div class="medium-8 columns file_upload">
-          <%= render "form_section/file_input", name: "#{record_class_name}[#{upload_document}][0][document]", id: "#{record_class_name}_#{upload_document}_0_document", help_text: document_upload_box.help_text || ""%>
-          <% if help_text['add'].present? %><p class="help"><%= help_text['add']  %></p><% end %>
-        </div>
-      </div>
-      <div class="row">
-        <div class="medium-4 columns">
-          <label class="key"><%=I18n.t("fields.file_upload_box.#{doc_type}.current_document_label")%></label>
-        </div>
-        <div class="medium-8 columns">
-          <%= check_box_tag "#{record_class_name}[#{upload_document}][0][is_current]", true, false, :id => is_current_upload_id, :tag => "is_current" %>
-          <% if help_text['current'].present? %><p class="help"><%= help_text['current']  %></p><% end %>
-        </div>
-      </div>
-      <div class="row">
-        <div class="medium-4 columns">
-          <label class="key"><%=I18n.t("fields.file_upload_box.#{doc_type}.document_name_label")%></label>
-        </div>
-        <div class="medium-8 columns">
-          <%= text_field_tag "#{record_class_name}[#{upload_document}][0][document_description]", "", :id => description_upload_id, :tag => "description" %>
-          <% if help_text['name'].present? %><p class="help"><%= help_text['name']  %></p><% end %>
-        </div>
-      </div>
-      <div class="row">
-        <div class="medium-4 columns">
-          <label class="key"><%= I18n.t("fields.file_upload_box.#{doc_type}.document_date_label")%></label>
-        </div>
-        <div class="medium-8 columns">
-          <%= text_field_tag "#{record_class_name}[#{upload_document}][0][date]", "", :tag => "date", :class => 'form_date_field has_help', :id => date_upload_id, "data-abide-validator" => date_validator %>
-          <small class="error"><%= I18n.t(error_msg)%></small>
-          <p class="help">
-            <% if help_text['date'].present? %>
-              <%= help_text['date']  %>
-            <% else %>
-              <%= t("fields.date_help") %>
-            <% end %>
-          </p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="medium-4 columns">
-          <label class="key"><%=I18n.t("fields.file_upload_box.#{doc_type}.comment_label")%></label>
-        </div>
-        <div class="medium-8 columns">
-          <%= text_area_tag "#{record_class_name}[#{upload_document}][0][comments]", "", :id => comments_upload_id, :tag => "comments" %>
-          <% if help_text['comments'].present? %><p class="help"><%= help_text['comments']  %></p><% end %>
-        </div>
-      </div>
+      <%= render 'form_section/document_upload_box_add_fields', record_class_name: record_class_name, field: field, doc_type: doc_type %>
     </div>
   </div>
   <div id="document_upload_box_file_extension_popup_message" title="PRIMERO" style="display:none">
