--- a/app/views/form_section/_textarea.html.erb
+++ b/app/views/form_section/_textarea.html.erb
@@ -6,25 +6,29 @@
 %>
 <div class="row">
   <div class="medium-4 columns">
-      <span class="tool-tip-label">
-          <%= label_tag field_id, t(textarea.name,:default => textarea.display_name), :class=>'key inline' %>
-      </span>
+    <span class="tool-tip-label">
+      <%= label_tag field_id, t(textarea.name,:default => textarea.display_name), :class=>'key inline' %>
+    </span>
   </div>
   <div class="medium-8 columns">
-    <% if textarea.required %><span class="required form-section-required">*</span><% end %>
-    <%= text_area_tag name, value, :disabled => textarea.disabled, :id => field_id, :editable => textarea.editable, rows: "2", required: textarea.required %>
-    <% if textarea.help_text %><p class="help"><%= textarea.help_text %></p><% end %>
-    <% if textarea.guiding_questions.present? %>
-      <%= link_to(t('buttons.guiding_questions'), '', class: 'gq_popovers', tabindex: '0', 
-            data: { 
-              toggle: 'popover', 
-              trigger: 'focus', 
-              title: t('buttons.guiding_questions'), 
-              html: true 
-            }) %>
-      <div class='popover_content' style="display:none;">
-        <%=  textarea.guiding_questions %>
-      </div>
+    <% if textarea.disabled || !textarea.editable %>
+      <%= content_tag :span, value, id: field_id, class: "value" %>
+    <% else %>
+      <% if textarea.required %><span class="required form-section-required">*</span><% end %>
+      <%= text_area_tag name, value, :disabled => textarea.disabled, :id => field_id, :editable => textarea.editable, rows: "2", required: textarea.required %>
+      <% if textarea.help_text %><p class="help"><%= textarea.help_text %></p><% end %>
+      <% if textarea.guiding_questions.present? %>
+        <%= link_to(t('buttons.guiding_questions'), '', class: 'gq_popovers', tabindex: '0',
+          data: {
+            toggle: 'popover',
+            trigger: 'focus',
+            title: t('buttons.guiding_questions'),
+            html: true
+          }) %>
+        <div class='popover_content' style="display:none;">
+          <%=  textarea.guiding_questions %>
+        </div>
+      <% end %>
     <% end %>
   </div>
 </div>
